--- a/public/home.html
+++ b/public/home.html
@@ -24,14 +24,16 @@
 <body>
   <div class="container text-center">
 
-    <header class="jumbotron bg-primary text-white my-3">
+    <header class="jumbotron bg-primary text-white mt-3 mb-2">
       <h1>Friend Finder</h1>
       <h2><i class='fas fa-user-friends'></i></h2>
       <a href="/survey" class="btn btn-secondary mt-2" role="button">Start Survey</a>
     </header>
 
-    <footer class="bg-dark py-2">
-      <p class="m-0"><a href="/api/friends" class="text-primary">Friends API</a></p>
+    <footer class="card bg-secondary">
+      <div class="card-body">
+        <p class="m-0"><a href="/api/friends" class="text-white">Friends API</a></p>
+      </div>
     </footer>
 
   </div>
