--- a/public/home.html
+++ b/public/home.html
@@ -27,10 +27,11 @@
     <header class="jumbotron bg-primary text-white mt-3 mb-2">
       <h1>Friend Finder</h1>
       <h2><i class='fas fa-user-friends'></i></h2>
-      <a href="/survey" class="btn btn-secondary mt-2" role="button">Start Survey</a>
+      <h3>Answer a few simple questions to find the best match</h3>
+      <a href="/survey" class="btn btn-secondary mt-4" role="button">Ready to start?</a>
     </header>
 
-    <footer class="card bg-secondary">
+    <footer class="card bg-secondary mb-2">
       <div class="card-body">
         <p class="m-0"><a href="/api/friends" class="text-white">Friends API</a></p>
       </div>
