--- a/public/survey.html
+++ b/public/survey.html
@@ -27,6 +27,7 @@
     <header class="jumbotron bg-primary text-white mt-3 mb-2">
       <h1>Survey</h1>
       <h2><i class='far fa-file-alt'></i></h2>
+      <h4>Express your tastes by moving the slider to the left or right</h4>
     </header>
 
     <div class="card mb-2">
@@ -34,21 +35,21 @@
 
         <form>
           <div class="form-group">
-            <label for="nickname" id="nickname-label">Your Nickname</label>
+            <label for="nickname" id="nickname-label"><h6>Your Nickname</h6></label>
             <input type="text" class="form-control" id="nickname" placeholder="Nickname" required>
           </div>
-          <div class="form-group mb-5">
-            <label for="photo-link" id="photo-link-label">Link to Your Photo</label>
+          <div class="form-group mb-3">
+            <label for="photo-link" id="photo-link-label"><h6>Link to Your Photo</h6></label>
             <input type="url" class="form-control" id="photo-link" placeholder="http://www.example.com/my-photo.jpg" required>
           </div>
           <div id="questions"></div>
-          <button type="submit" class="btn btn-primary" id="submit-button">Find Your Best Match</button>
+          <button type="submit" class="btn btn-primary my-3" id="submit-button">Find Your Best Match</button>
         </form>
 
       </div>
     </div>
 
-    <footer class="card bg-secondary">
+    <footer class="card bg-secondary mb-2">
       <div class="card-body">
         <p class="m-0"><a href="/" class="text-white">Start Over</a></p>
       </div>
@@ -59,7 +60,7 @@
         <div class="modal-content">
 
           <div class="modal-body">
-            <h2 style="color: red">Your Best Match Is</h2>
+            <h2 style="color: #eb6864">Your Best Match Is</h2>
             <div id="result-photo" class="my-3" style="max-height: 400px"></div>
             <div id="result-nickname"></div>
             <button type="button" class="btn btn-primary mt-4" data-dismiss="modal">Close</button>
