--- a/public/home.html
+++ b/public/home.html
@@ -24,6 +24,7 @@
 <body>
   <div class="container text-center">
 
+    <!-- Header -->
     <header class="jumbotron bg-primary text-white mt-3 mb-2">
       <h1>Friend Finder</h1>
       <h2><i class='fas fa-user-friends'></i></h2>
@@ -31,6 +32,7 @@
       <a href="/survey" class="btn btn-secondary mt-4" role="button">Ready to start?</a>
     </header>
 
+    <!-- Footer -->
     <footer class="card bg-secondary mb-2">
       <div class="card-body">
         <p class="m-0"><a href="/api/friends" class="text-white">Friends API</a></p>
