--- a/public/survey.html
+++ b/public/survey.html
@@ -24,12 +24,14 @@
 <body>
   <div class="container text-center">
 
+    <!-- Header -->
     <header class="jumbotron bg-primary text-white mt-3 mb-2">
       <h1>Survey</h1>
       <h2><i class='far fa-file-alt'></i></h2>
       <h4>Express your tastes by moving the slider to the left or right</h4>
     </header>
 
+    <!-- User input -->
     <div class="card mb-2">
       <div class="card-body">
 
@@ -49,12 +51,14 @@
       </div>
     </div>
 
+    <!-- Footer -->
     <footer class="card bg-secondary mb-2">
       <div class="card-body">
         <p class="m-0"><a href="/" class="text-white">Start Over</a></p>
       </div>
     </footer>
 
+    <!-- Modal -->
     <div class="modal" id="results-modal">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
